<resources>
    <string name="app_name">au547056 Stocks</string>
    <string name="my_stock_1">My Stock</string>
    <string name="sector_1">Sector:</string>
    <string name="stocks_1">#Stocks:</string>
    <string name="price_1">Price:</string>
    <string name="irkutsk_petting_zoo_1">Irkutsk Petting Zoo</string>
    <string name="_50_5_1">50.5</string>
    <string name="_0_1">0</string>
    <string name="textview_1">TextView</string>
    <string name="name_1">Name:</string>
    <string name="back_1">Back</string>
    <string name="edit_1">Edit</string>
    <string name="my_stock_2">My Stock</string>
    <string name="irkutsk_petting_zoo_2">Irkutsk Petting Zoo</string>
    <string name="no_stocks_purchased_yet_1">No stocks purchased yet</string>
    <string name="details_1">Details</string>
    <string name="irkutsk_petting_zoo_3">Irkutsk Petting Zoo</string>
    <string name="no_stocks_purchased_yet_2">No stocks purchased yet</string>
    <string name="details_2">Details</string>
    <string name="sector_2">Sector:</string>
    <string name="stocks_2">#Stocks:</string>
    <string name="price_2">Price:</string>
    <string name="irkutsk_petting_zoo_4">Irkutsk Petting Zoo</string>
    <string name="_50_5_2">50.5</string>
    <string name="_0_2">0</string>
    <string name="textview_2">TextView</string>
    <string name="name_2">Name:</string>
    <string name="back_2">Back</string>
    <string name="edit_2">Edit</string>
    <string name="_0_3">0</string>
    <string name="price_3">Price:</string>
    <string name="name_3">Name:</string>
    <string name="sector_3">Sector:</string>
    <string name="stocks_3">#Stocks:</string>
    <string name="irkutsk_petting_zoo_5">Irkutsk Petting Zoo</string>
    <string name="save_1">Save</string>
    <string name="cancel_1">Cancel</string>
    <string name="animals_1">Animals</string>
    <string name="ak_47_1">AK-47</string>
    <string name="americans_1">Americans</string>
    <string name="_50_5_3">50.5</string>
    <string name="_0_4">0</string>
    <string name="price_4">Price:</string>
    <string name="name_4">Name:</string>
    <string name="sector_4">Sector:</string>
    <string name="stocks">#Stocks:</string>
    <string name="irkutsk_petting_zoo">Irkutsk Petting Zoo</string>
    <string name="save_2">Save</string>
    <string name="cancel_2">Cancel</string>
    <string name="_50_5_4">50.5</string>
    <string name="animals_2">Animals</string>
    <string name="ak_47_2">AK-47</string>
    <string name="americans_2">Americans</string>
    <string name="todo">TODO</string>
    <string name="bought_at">Bought at:</string>
    <string name="delete">Delete</string>
    <string name="refresh">refresh</string>
    <string name="bought_at_land">Bought at:</string>
    <string name="not_set">Not set</string>
    <string name="delete_2">Delete</string>
    <string name="refresh_d">refresh</string>
    <string name="not_set_2">Not set</string>
    <string name="refresh_portrait">Refresh</string>
    <string name="stop_land">Stop</string>
    <string name="addNew_land">+</string>
    <string name="start_land">Start</string>
    <string name="addNew_portrait">+</string>
    <string name="stop_portrait">Stop</string>
    <string name="start_portrait">Start</string>
    <string name="press_to_start_updating_data_every_2_minutes_refresh_won_t_work_while_automatic_update_is_running">Press to start updating data every 2 minutes. Refresh won\'t work while automatic update is running</string>
    <string name="bought_for">Bought for</string>

</resources>
